# coba-web

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Makefile  README.md  render.yaml
.github/workflows/: ci.yml  deploy-backend.yml  e2e-slow.yml
backend/: .gitignore  pyproject.toml  pyrightconfig.json
backend/src/coba_server/: __init__.py  config.py  di.py
backend/src/coba_server/models/: algorithms.py  context.py  simulation.py
backend/src/coba_server/routes/: algorithms.py  scenarios.py  simulate.py
backend/src/coba_server/services/: base.py  coba_adapter.py  coba_adapter_real.py  scenario_registry.py  simulator.py
backend/src/coba_server/utils/: context_sampling.py  covariance.py  cyclic_time.py
backend/tests/: conftest.py  test_coba_adapter.py  test_coba_adapter_drift.py  test_context_sampling.py  test_health.py  test_models.py  test_routes.py  test_routes_results.py  test_routes_scenarios.py  test_scenario_registry.py  test_simulator.py  test_step_performance.py
docs/: E2E_TEST_COVERAGE.md  E2E_TEST_PLAN.md  PERF_BASELINE.md  TEST_COVERAGE.md  bug-report-epsilon-greedy-base-estimator.md  coba-onboarding-plan.md  fix-plan.md  implementation-plan.md  testing-plan.md
frontend/: IMPLEMENTATION_PLAN.md  README.md  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
frontend/e2e/: accessibility.spec.ts  algorithms.spec.ts  api-contract.spec.ts  backend-integration.spec.ts  compare.spec.ts  cross-page.spec.ts  failure-states.spec.ts  (+12 more)
scripts/: perf-baseline.sh
(+109 files in other folders)
